[gd_scene load_steps=19 format=3 uid="uid://cmkkqdv3vgyvx"]

[ext_resource type="Script" uid="uid://dnuroynx6cxpx" path="res://Scripts/Player/player_controller.gd" id="1_8od7v"]
[ext_resource type="Texture2D" uid="uid://cy3k2evyu5wow" path="res://Sprites/Karrot/Officer Karrot.png" id="1_lc1oi"]
[ext_resource type="Script" uid="uid://lxykvh8n180e" path="res://Scripts/character_movement.gd" id="2_0qy5o"]
[ext_resource type="Script" uid="uid://bgeqw4pxum4pe" path="res://Scripts/health.gd" id="2_7nf3m"]
[ext_resource type="Texture2D" uid="uid://b0ytluma710xy" path="res://Sprites/Karrot/Kommander Karrot Gun (2).png" id="3_qc4db"]
[ext_resource type="Script" uid="uid://ffpwr61tmynt" path="res://Scripts/Player/player_animations.gd" id="4_35xla"]
[ext_resource type="Script" uid="uid://op5p8n5l6mhr" path="res://Scripts/Weapons/gun.gd" id="5_i3aeo"]
[ext_resource type="Texture2D" uid="uid://bcaopvbl07dht" path="res://Sprites/Karrot/KommanderKarrotRifle.png" id="6_2cgwh"]
[ext_resource type="PackedScene" uid="uid://3vx2xqx58jh1" path="res://Scenes/pistol_laser.tscn" id="6_qpfo2"]
[ext_resource type="Script" uid="uid://clhm7llkfkr44" path="res://Scripts/Player/player_ui.gd" id="7_0c07c"]
[ext_resource type="Texture2D" uid="uid://bwortl0veyfop" path="res://Sprites/Karrot/UI/StaminaRing.png" id="8_0c07c"]
[ext_resource type="PackedScene" uid="uid://ke0mkuup52qd" path="res://Scenes/rifle_laser.tscn" id="8_yb21e"]
[ext_resource type="Texture2D" uid="uid://d387dg2w1ngnf" path="res://Sprites/Karrot/hand.png" id="11_mie3u"]
[ext_resource type="PackedScene" uid="uid://baagc3a3ws25j" path="res://Scenes/grape_officer.tscn" id="13_aees8"]

[sub_resource type="Environment" id="Environment_iaow0"]
background_mode = 3
glow_enabled = true
glow_levels/1 = 10.0
glow_levels/2 = 5.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0c07c"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lc1oi"]
size = Vector2(32, 56)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2cgwh"]
particle_flag_disable_z = true
spread = 20.0
initial_velocity_max = 195.97
gravity = Vector3(0, 98, 0)
linear_accel_min = -100.0
linear_accel_max = -87.36
scale_max = 3.0
color = Color(0.929715, 0.929715, 0.929715, 1)

[node name="TestSceneNode" type="Node2D"]

[node name="PlayerCamera" type="Camera2D" parent="."]
zoom = Vector2(0.6, 0.6)

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
offset_left = -398.0
offset_top = -224.0
offset_right = 878.0
offset_bottom = 494.0
scale = Vector2(0.999928, 1)
color = Color(0.165656, 0.165656, 0.165656, 1)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_iaow0")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(369, 104)

[node name="ColorRect" type="ColorRect" parent="StaticBody2D"]
offset_right = 40.0
offset_bottom = 40.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(20, 20)
shape = SubResource("RectangleShape2D_0c07c")

[node name="KommanderKarrot" type="Node2D" parent="." node_paths=PackedStringArray("sprite", "health", "guns", "ui", "dodge_roll_timer", "equip_animation_timer")]
script = ExtResource("1_8od7v")
sprite = NodePath("CharacterBody2D/Sprite")
health = NodePath("Health")
guns = NodePath("CharacterBody2D/Guns")
ui = NodePath("CharacterBody2D/RemoteTransform2D/UI")
dodge_roll_timer = NodePath("ActionTimers/DodgeRollTimer")
equip_animation_timer = NodePath("ActionTimers/EquipAnimationTimer")

[node name="Health" type="Node2D" parent="KommanderKarrot"]
script = ExtResource("2_7nf3m")

[node name="CharacterBody2D" type="CharacterBody2D" parent="KommanderKarrot"]
collision_layer = 2
collision_mask = 5
script = ExtResource("2_0qy5o")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="KommanderKarrot/CharacterBody2D"]
remote_path = NodePath("../../../PlayerCamera")

[node name="UI" type="Node2D" parent="KommanderKarrot/CharacterBody2D/RemoteTransform2D" node_paths=PackedStringArray("player")]
script = ExtResource("7_0c07c")
player = NodePath("../../..")

[node name="RollCooldownProgressBar" type="TextureProgressBar" parent="KommanderKarrot/CharacterBody2D/RemoteTransform2D/UI"]
offset_left = -400.0
offset_top = -225.0
offset_right = 1200.0
offset_bottom = 675.0
scale = Vector2(0.5, 0.5)
step = 0.01
fill_mode = 4
texture_under = ExtResource("8_0c07c")
texture_over = ExtResource("8_0c07c")
texture_progress = ExtResource("8_0c07c")
tint_under = Color(1.6, 1.3, 1.01, 1)
tint_over = Color(1, 1, 1, 0)
tint_progress = Color(0.188235, 0.188235, 0.188235, 1)

[node name="RollCooldownTimer" type="Timer" parent="KommanderKarrot/CharacterBody2D/RemoteTransform2D/UI"]
wait_time = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KommanderKarrot/CharacterBody2D"]
shape = SubResource("RectangleShape2D_lc1oi")

[node name="Sprite" type="Sprite2D" parent="KommanderKarrot/CharacterBody2D" node_paths=PackedStringArray("roll_particles", "damage_animation_timer")]
scale = Vector2(2, 2)
texture = ExtResource("1_lc1oi")
script = ExtResource("4_35xla")
roll_particles = NodePath("../../RollParticles")
damage_animation_timer = NodePath("../../AnimationTimers/DamageAnimationTimer")

[node name="Guns" type="Node2D" parent="KommanderKarrot/CharacterBody2D"]

[node name="Gun" type="Node2D" parent="KommanderKarrot/CharacterBody2D/Guns" node_paths=PackedStringArray("character", "gun_sprite", "cooldown_timer", "fire_point", "hand_1_point", "hand_2_point", "hand_1", "hand_2")]
script = ExtResource("5_i3aeo")
character = NodePath("../../..")
laser_scene = ExtResource("6_qpfo2")
gun_sprite = NodePath("GunSprite")
cooldown_timer = NodePath("FireCooldownTimer")
fire_point = NodePath("GunSprite/FirePoint")
hand_1_point = NodePath("GunSprite/Hand1Point")
hand_2_point = NodePath("GunSprite/Hand2Point")
hand_1 = NodePath("../../Hand1")
hand_2 = NodePath("../../Hand2")
damage = 15
equip_time = 0.2

[node name="GunSprite" type="Sprite2D" parent="KommanderKarrot/CharacterBody2D/Guns/Gun"]
position = Vector2(22, 8)
scale = Vector2(0.9, 0.9)
texture = ExtResource("3_qc4db")

[node name="FirePoint" type="Node2D" parent="KommanderKarrot/CharacterBody2D/Guns/Gun/GunSprite"]
position = Vector2(15.5556, -2.22222)
scale = Vector2(1.11111, 1.11111)

[node name="Hand1Point" type="Node2D" parent="KommanderKarrot/CharacterBody2D/Guns/Gun/GunSprite"]
position = Vector2(-10, 3.33333)

[node name="Hand2Point" type="Node2D" parent="KommanderKarrot/CharacterBody2D/Guns/Gun/GunSprite"]
position = Vector2(-10, 3.33333)

[node name="FireCooldownTimer" type="Timer" parent="KommanderKarrot/CharacterBody2D/Guns/Gun"]
wait_time = 0.3

[node name="Gun2" type="Node2D" parent="KommanderKarrot/CharacterBody2D/Guns" node_paths=PackedStringArray("character", "gun_sprite", "cooldown_timer", "fire_point", "hand_1_point", "hand_2_point", "hand_1", "hand_2")]
visible = false
script = ExtResource("5_i3aeo")
character = NodePath("../../..")
laser_scene = ExtResource("8_yb21e")
gun_sprite = NodePath("GunSprite")
cooldown_timer = NodePath("FireCooldownTimer")
fire_point = NodePath("GunSprite/FirePoint")
hand_1_point = NodePath("GunSprite/Hand1Point")
hand_2_point = NodePath("GunSprite/Hand2Point")
hand_1 = NodePath("../../Hand1")
hand_2 = NodePath("../../Hand2")
autofire = true
damage = 5
equip_time = 0.3

[node name="GunSprite" type="Sprite2D" parent="KommanderKarrot/CharacterBody2D/Guns/Gun2"]
position = Vector2(22, 8)
texture = ExtResource("6_2cgwh")

[node name="FirePoint" type="Node2D" parent="KommanderKarrot/CharacterBody2D/Guns/Gun2/GunSprite"]
position = Vector2(12, -4)

[node name="Hand1Point" type="Node2D" parent="KommanderKarrot/CharacterBody2D/Guns/Gun2/GunSprite"]
position = Vector2(-24, 2)

[node name="Hand2Point" type="Node2D" parent="KommanderKarrot/CharacterBody2D/Guns/Gun2/GunSprite"]
position = Vector2(-2, 3)

[node name="FireCooldownTimer" type="Timer" parent="KommanderKarrot/CharacterBody2D/Guns/Gun2"]
wait_time = 0.1

[node name="Hand1" type="Sprite2D" parent="KommanderKarrot/CharacterBody2D"]
position = Vector2(-7, 12)
texture = ExtResource("11_mie3u")

[node name="Hand2" type="Sprite2D" parent="KommanderKarrot/CharacterBody2D"]
position = Vector2(8, 12)
texture = ExtResource("11_mie3u")

[node name="ActionTimers" type="Node2D" parent="KommanderKarrot"]

[node name="DodgeRollTimer" type="Timer" parent="KommanderKarrot/ActionTimers"]
wait_time = 0.4

[node name="EquipAnimationTimer" type="Timer" parent="KommanderKarrot/ActionTimers"]

[node name="AnimationTimers" type="Node2D" parent="KommanderKarrot"]

[node name="DamageAnimationTimer" type="Timer" parent="KommanderKarrot/AnimationTimers"]

[node name="RollParticles" type="GPUParticles2D" parent="KommanderKarrot"]
position = Vector2(0, 23)
emitting = false
amount = 12
lifetime = 0.25
one_shot = true
explosiveness = 0.4
process_material = SubResource("ParticleProcessMaterial_2cgwh")

[node name="GrapeOfficer" parent="." instance=ExtResource("13_aees8")]
position = Vector2(193, 166)

[connection signal="timeout" from="KommanderKarrot/CharacterBody2D/RemoteTransform2D/UI/RollCooldownTimer" to="KommanderKarrot/CharacterBody2D/RemoteTransform2D/UI" method="_on_roll_cooldown_timer_timeout"]
[connection signal="timeout" from="KommanderKarrot/CharacterBody2D/Guns/Gun/FireCooldownTimer" to="KommanderKarrot/CharacterBody2D/Guns/Gun" method="_on_fire_cooldown_timer_timeout"]
[connection signal="timeout" from="KommanderKarrot/CharacterBody2D/Guns/Gun2/FireCooldownTimer" to="KommanderKarrot/CharacterBody2D/Guns/Gun2" method="_on_fire_cooldown_timer_timeout"]
[connection signal="timeout" from="KommanderKarrot/ActionTimers/DodgeRollTimer" to="KommanderKarrot" method="_on_dodge_roll_timer_timeout"]
[connection signal="timeout" from="KommanderKarrot/ActionTimers/EquipAnimationTimer" to="KommanderKarrot" method="_on_equip_animation_timer_timeout"]
[connection signal="timeout" from="KommanderKarrot/AnimationTimers/DamageAnimationTimer" to="KommanderKarrot/CharacterBody2D/Sprite" method="_on_damage_animation_timer_timeout"]
